objects/vlocity_cmt__AccountDiscountItem__c.object
<CustomObject>
    <description>An item or category of items to which an account discount applies. Master-detail child object of Account Discount (AccountDiscount__c).</description>
    <fields>
        <fullName>vlocity_cmt__AccountDiscountId__c</fullName>
        <label>Account Discount</label>
        <referenceTo>vlocity_cmt__AccountDiscount__c</referenceTo>
        <relationshipLabel>Account Discount Items</relationshipLabel>
        <relationshipName>AccountDiscountItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Account Discount Items (Category)</relationshipLabel>
        <relationshipName>AccountDiscountItemsCategory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Account Discount Items (Product)</relationshipLabel>
        <relationshipName>AccountDiscountItemsProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>